issue: add wrap/nowrap for grid system

--- a/src/_grid.scss
+++ b/src/_grid.scss
@@ -19,6 +19,10 @@
   @include flex-wrap(wrap);
 }
 
+.row-nowrap{
+  @include flex-wrap(nowrap);
+}
+
 .row-no-padding {
   padding: 0;
 
